# rust-cc

./: .gitignore  CC-Topo-2022-2023.xml  Cargo.toml  README.md
configFiles/: example-com.db
dnsmake/: Cargo.toml
dnsmake/src/: dns_message_struct.rs  dnssend.rs
dnsmake/src/dnsmake/: dns_make.rs  mod.rs
etc/: 10-in-addr-reverse.db  com.conf  com.db  example-com.config  example-com.db  example-official.conf  example-official.db  finder-official.db  golfinho.conf  in-addr-reverse.db  official.conf  official.db  orca.conf  reverse.db  root.conf  root.db  rootservers.db  servidor2.conf  servidor3.conf  smaller-example-com.conf  smaller-example-com.db  ss_example-official.conf  test-com.conf  test-com.db  test-example-com.conf  test-example-com.db  toplevel.conf  toplevel.db
libs/data_structs/: dns_message.rs  mod.rs  server_database.rs  sp_config.rs
my_dns/: .rustc_info.json  Cargo.toml
my_dns/etc/: test-config.conf
my_dns/src/: lib.rs
my_dns/src/dns_components/: mod.rs  sp.rs  sr.rs  ss.rs
my_dns/src/dns_make/: dns_recv.rs  dns_send.rs  mod.rs
my_dns/src/dns_parse/: domain_database_parse.rs  mod.rs  server_config_parse.rs
my_dns/src/dns_structs/: .dns_domain_name.rs.rustfmt  dns_domain_name.rs  dns_message.rs  domain_database_struct.rs  mod.rs  server_config.rs
mylibs/: Cargo.toml
mylibs/src/: lib.rs
notes/.obsidian/: graph.json  workspace.json
notes/CL/: CL.md  IO.md
notes/SP/: Config.md  IO.md  SP.md  ST List.md
src/: cl.rs  client.rs  lib.rs  main.rs  server.rs  test_parser.rs
src/libs/: Cargo.toml
tests/: test_server_client.rs
(+6 files in other folders)
