[package]
name = "rustcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustcc"
path = "./src/lib.rs"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[dependencies]
regex = "1"
clap = { version = "4.0.19", features = ["cargo"] }
rand = "0.8.5"
serde = {version="1.0.147",features=["derive"]}
my_dns = {path = "./my_dns"}
bincode = "1.3.3"
log4rs = "1.2.0"
log = "0.4.17"
