[package]
name = "my_dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bincode = "1.3.3"
queues = "1.1.0"
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
log = "0.4"
